实现插入排序

--- a/sort/makefile
+++ b/sort/makefile
@@ -1,4 +1,6 @@
-all=main.cc quick_sort.cpp BubbleSort.cpp
-
+all=main.cc quick_sort.cpp BubbleSort.cpp MergeSort.cpp InsertSort.cpp
 main:$(all)
-	g++ $^ -o $@ -std=c++11
+	g++ $^ -o $@ -std=c++11 -g
+
+clean:
+	rm -f main
